--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <div>学部・・・商学部　商学科</div>
           <div>出身・・・大阪府</div>
           <div>呼び名・・ちょうこう、てつや</div>
-          <div>特徴<br>　大阪選抜に選ばれるほどの実力者。<br>　セットアップと兼サーしておりバレー大好き人間。<br>　しかしハイキューは去年の9月から見かけてない。
+          <div>　特徴<br>大阪選抜に選ばれるほどの実力者。<br>セットアップと兼サーしておりバレー大好き人間。<br>しかしハイキューは去年の9月から見かけてない。
           </div>　
         </div>
        </div>
@@ -49,7 +49,7 @@
       <li class="item_2">
        <img src="takumi.jpg" width="100" height="100">
        <div class="kana_2">うえだ　たくみ</div>
-       <div class="kanji_2">植田　匠</div>
+       <div class="kanji_2">植田　匠海</div>
        <div class="gakubu_2">商学部<br>商学科</div>
       </li>
 
